--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus Objetivos do ano_</h2>
+        <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
         <div class="botoes">
             <button class="botao">Cursos na Alura</button>
             <button class="botao">Criar projetos</button>
