--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="en"><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meus objetivos do ano</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index_arquivos/style.css">
 
 </head>
 
@@ -21,6 +20,6 @@
         </div>
     </section>
 
-</body>
 
-</html>
+
+</body></html>
