--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <button class="botao">Atualizar meu currículo</button>
         </div>
     </section>
+    <script src="main.js"></script>
 
 
 
